Commit some changes to tables

--- a/tables.html
+++ b/tables.html
@@ -6,6 +6,7 @@
     <title>Tables</title>
 </head>
 <body>
+    <h1>Web developer resources</h1>
     <!-- made a table with three colums -->
     <table>
         <tr>
