--- a/forms.html
+++ b/forms.html
@@ -10,26 +10,23 @@
     <h1>Check-in Form</h1>
     <form action="https://formspree.io/f/xaygaqnd"
     method="post">
-<label for=""><b>Full name</b></label>
+<label for="name"><b>Full name</b></label>
 <br>
-<input type="text">
+<input type="text" name="name">
 <br>
-<label for=""><b>Gender</b></label>
+<label for="gender"><b>Gender</b></label>
 <br>
-<input type="text">
+<input type="text" name="gender">
 <br>
-<label for=""><b>Date of Birth</b></label>
+<label for="dob"><b>Date of Birth</b></label>
 <br>
-<input type="date">
+<input type="date" name="dob">
 <br>
-<label for=""><b>Time of Arrival</b></label>
+<label for="time"><b>Time of Arrival</b></label>
 <br>
-<input type="time">
+<input type="time" name="time">
+<br>
+<input type="submit">
     </form>
-    <div style="margin: 0; padding: 0%; border: 0cqb; color: blue;"></div>
-    <button><a href="submit"></a>Submit</button>
-
-    </div>
-    </center>
 </body>
 </html>
