--- a/firtPage.html
+++ b/firtPage.html
@@ -3,35 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>My first web page at Life Choices
     </title>
 </head>
 <body>
-    <h1>Hobbies</h1>
-    <h2>Playing basketball</h2>
-    <div>
-    <pr>I enjoy <b>playing</b> basketball on my free timee.</pr>
-    </div>
-    <!-- wrote paragraphs and used the div tag to separate them -->
-    <pr>I haven't played <i>organised</i> basketball since high school</pr>
-    <h2>Listening to music</h2>
-    <div>
-    <pr>I love music, it speak to the deepest part of my soul</pr>
-    </div>
-    <pr>I love afro beats more than any genre of music</pr>
-    <h1>Goals</h1>
-    <h2>Maintain an average of 75%</h2>
-    <div>
-    <pr>I want to maintain a <b>75% average</b> to really feel confident about my <i>skills</i> as a developer</pr>
-    </div>
-    <pr><b>Confidence</b> is key and this would make me confident in myself</pr>
-    <h2>Earn three certificates on the side related to the tech industry</h2>
-    <div>
-    <pr><b>Up skilling</b> is one of the things that sets you apart in the <i>eyes</i> of an employer</pr>
-    </div>
-    <pr>I want certificates related to this field so I can get my <i>foot in the door</i></pr>
-</body>
-
-
-<footer>Asithandile Tyulu @2023</footer>
+    <a href="https://lifechoicesacademy.com/" target="_blank">
+        <img src="/logo_429x991-262x60.png">
+<div>
+        <nav id="navBar">
+            <a href="">Home</a>
+            <a href="">Rollercoaster</a>
+            <a href="">Confident</a>
+            <a href="">Happy</a>
+        </nav>
+</div>
+<details class="hover">
+    <summary>More</summary>
+    <summary><a href="/index.html">Music</a></summary>
+    <summary><a href="/forms.html">Contact</a></summary>
+</details>
+    <aside>
+        <h1>Rollercoaster</h1>
+        <img src="/Rollercoaster.jpg" height="400" width="400">
+        <p>I am fun and adventurous.</p>
+        <h1>I got that dawg in me!</h1>
+        <img src="/Dawg in me.jpg" height="400" width="400">
+        <p>I am confident and I believe in myself.</p>
+        <h1>Happy</h1>
+        <img src="/Happy.jpg" height="400" width="400">
+        <p>I am a happy person, and I bring joy in spaces.</p>
+    </aside>
+    
+ <button id="button"><a href="#">Top</a></button>
+<footer><h6>Asithandile Tyulu @2023</h6></footer>
 </html>
