--- a/forms.html
+++ b/forms.html
@@ -18,11 +18,11 @@
 <br>
 <input type="text" name="gender">
 <br>
-<label for="dob"><b>Date of Birth</b></label>
+<label for="dob"><b>Message</b></label>
 <br>
-<input type="date" name="dob">
+<input type="text" name="dob">
 <br>
-<label for="time"><b>Time of Arrival</b></label>
+<label for="time"><b>Time of Message</b></label>
 <br>
 <input type="time" name="time">
 <br>
