--- a/index.html
+++ b/index.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asithandile Tyulu</title>
+    <link rel="stylesheet" href="index.css">
+    <title>My first web page at Life Choices
+    </title>
 </head>
-<center>
-<header class="header">
-    <h1>
-    Asithandile Tyulu
-    </h1>
-</header>
-</center>
 <body>
-    <header class="h2">
-    <center><h2>Top 5 Hip-Hop All Time</h2></center>
-    </header>
-<ol class="navigation">
-   <li>DMX - X Gon Give It To You</li>
-   <li>Jay-Z - 99 Problems</li>
-   <li>Kendrick Lamar - HiiPower</li>
-   <li>Nas - Ether</li>
-   <li>Lil Wayne - Mirror</li>
-</ol>
-</body>
+    <a href="https://lifechoicesacademy.com/" target="_blank">
+        <img src="/logo_429x991-262x60.png">
+<div>
+        <nav id="navBar">
+            <a href="">Home</a>
+            <a href="">Rollercoaster</a>
+            <a href="">Confident</a>
+            <a href="">Happy</a>
+        </nav>
+</div>
+<details class="hover">
+    <summary>More</summary>
+    <summary><a href="/index.html">Music</a></summary>
+    <summary><a href="/forms.html">Contact</a></summary>
+</details>
+    <aside>
+        <h1>Rollercoaster</h1>
+        <img src="/Rollercoaster.jpg" height="400" width="400">
+        <p>I am fun and adventurous.</p>
+        <h1>I got that dawg in me!</h1>
+        <img src="/Dawg in me.jpg" height="400" width="400">
+        <p>I am confident and I believe in myself.</p>
+        <h1>Happy</h1>
+        <img src="/Happy.jpg" height="400" width="400">
+        <p>I am a happy person, and I bring joy in spaces.</p>
+    </aside>
+    
+ <button id="button"><a href="#">Top</a></button>
+<footer><h6>Asithandile Tyulu @2023</h6></footer>
 </html>
