--- a/forms.html
+++ b/forms.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <center>
-    <h1>Check-in Form</h1>
+    <h1>Contact Form</h1>
     <form action="https://formspree.io/f/xaygaqnd"
     method="post">
 <label for="name"><b>Full name</b></label>
 <br>
 <input type="text" name="name">
 <br>
-<label for="gender"><b>Gender</b></label>
+<label for="Company"><b>Company</b></label>
 <br>
 <input type="text" name="gender">
 <br>
